# pykiteconnect

./: .gitignore  README.md  pyproject.toml
examples/: flask_app.py  gtt_order.py  order_margins.py  simple.py  threaded_ticker.py  ticker.py
kiteconnect/: __init__.py  connect.py  exceptions.py  ticker.py
kiteconnect/types/: __init__.py  enum.py
tests/helpers/: utils.py
tests/integration/: conftest.py  test_connect_read.py  test_connect_write.py
tests/unit/: conftest.py  test_connect.py  test_exceptions.py  test_kite_object.py  test_ticker.py
