[project]
name = "pykiteconnect"
version = "5.0.1"
description = "The official Python client for the Kite Connect trading API"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries"
]
dependencies = [
    "pyopenssl>=25.1.0",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.5",
    "service-identity>=18.1.0",
    "six>=1.17.0",
    "websockets>=15.0.1",
]


[dependency-groups]
dev = [
    "mock>=5.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "responses>=0.25.8",
    "ruff>=0.12.10",
    "urllib3>=2.5.0",
]
