[project]
name = "kiteconnect"
version = "5.1.0"
description = "The official Python client for the Kite Connect trading API"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Zerodha Technology Pvt. Ltd. (India)", email = "talk@zerodha.tech" }
]
url = "https://kite.trade"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries"
]
dependencies = [
    "autobahn[twisted]>=25.12.2",
    "pydantic>=2.13.2",
    "pyopenssl>=26.0.0",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.33.1",
    "service-identity>=24.2.0",
    "six>=1.17.0",
]

[dependency-groups]
dev = [
    "mock>=5.2.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "responses>=0.26.0",
    "ruff>=0.15.11",
    "ty>=0.0.31",
    "urllib3>=2.6.3",
]

[tool.pytest.ini_options]
testpaths = "tests/unit"
addopts = [
    "-r fEsxXw",
    "-vvv",
    "--doctest-modules",
]

[tool.coverage.run]
branch = true
source = "kiteconnect"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
]
ignore_errors = true
omit = [
    "examples/*",
    "tests/*",
    "test*.py",
    "setup.py",
]

[tool.ruff]
exclude=[
    "build",
    ".git",
    ".eggs",
    "examples",
    "tests",
]
line-length = 119
target-version = "py311"

[tool.ruff.lint]
select = ["D", "E", "F", "W", "RUF", "UP", "I"]
